--- a/package.json
+++ b/package.json
@@ -3,13 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config  src/index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "Saad",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cores": "^0.8.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "json-web-token": "^3.2.0",
+    "mongoose": "^8.2.0",
+    "mongoose-aggregate-paginate-v2": "^1.0.7"
+  }
 }
