Add existing file

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ ACESS_TOKEN_STRING=youtube-code
 ACESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=youtube-backend
 REFRESH_TOKEN_EXPIRT=10d
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
